[project]
name = "supernotify"
readme = "README.md"

[tool.ruff]
line-length = 128
indent-width = 4
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "htmlcov",
    ".mypy_cache",
    ".pytest_cache",
    ".github",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
preview = true
select = ["E", "C","R", "F", "B", "W", "I", "C90", "N", "D", "UP", "YTT",
"RUF","PGH","PT","T20","DTZ","TD","PTH","ARG","INT","TCH","TID","SIM","FURB","PERF","ASYNC","ANN","S","A","COM","C4"]
ignore = [
    "W191","E111","E114","E117","D206","D300","Q000","Q001","COM812","COM819","ISC001","ISC002", # std formatter conflicts
    "D203","D213", # other formatter clashes
    "TD002","TD003","TD005",
    "D103","D100","D101","D102","D104","D107","D415","D400","D415","ANN101","ANN401",
    "S101","C901","FURB113",
    "S602","S607","S404" ] # subprocess usage
unfixable = ["B"]


[tool.ruff.format]
preview = true

[tool.poetry.group.dev.dependencies]
homeassistant-stubs = "2024.2.2"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
norecursedirs = [
    ".git",
    "templates",
]

addopts = [
    "--timeout=30",
    "--cov-report=xml:cov.xml",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov=custom_components.supernotify",
    "--cov-fail-under=80",
    "--allow-hosts=127.0.0.1,127.0.1.1,localhost"
]
